--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html ng-app>
-<head>
-  <meta charset="utf-8" />
-  <title>Exercice 1</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
-  <script src="assets/js/script.js"></script>
-  <link rel="stylesheet" href="assets/css/style.css" />
-</head>
-<body>
-  <div>
-  <form name="myForm">
-    <label>E-mail: <input type="email" name="email" ng-model="email" required></input></label>
-  </form>
-</div>
-<div ng-show="myForm.email.$valid" id="correct"></div>
-<div ng-show="myForm.email.$error.email" id="incorrect"></div>
-</body>
+<html lang="fr" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Exercice 1</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
+    <script src="assets/js/script.js"></script>
+  </head>
+  <body ng-app="validForm" ng-controller="validCtrl">
+    <form name="form">
+      <input type="text" id="email" name="email" ng-pattern="regex" ng-keypress="testMail()" ng-model="email" />
+      <div class="valid" ng-show="resultTestMail"></div>
+      <div class="error" ng-show="!resultTestMail"></div>
+    </form>
+  </body>
 </html>
